<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FRC Scouting App</string>
    <string name="edit_message">Enter a message</string>
    <string name="edit_team">Enter team number</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="test_message">Test</string>
    <string name="logo">This is the logo</string>
    <string name="space">Space</string>
    <string name="welcome_page_text">Welcome to Team #3467\'s Super Great, Totally Not Glitchy, Scouting App Developed by Noah Hebert!</string>
    <string name="welcome_warning">*Please firmly grasp device to safely contain hype.</string>
    <string name="match_scouting">Match Scouting</string>
    <string name="pit_scouting">Pit Scouting</string>
    <string name="team_stats">Team Stats.</string>
    <string name="title_activity_match_scouting_auto">Match Scouting Auto</string>
    <string name="title_activity_match_scouting_man">Match Scouting Man</string>
    <string name="title_activity_pit_scouting">Pit Scouting</string>
    <string name="title_activity_team_stats">TeamStats</string>
    <string name="title_activity_match_review">MatchReview</string>
    <string name="auto_scouting_text1">Autonomous</string>
    <string name="auto_scouting_text2">Scouting</string>
    <string name="title_activity_match_scouting_intro">Match Scouting Intro</string>
    <string name="enter_team">Enter Team #</string>
    <string name="enter_match">Enter Match #</string>
    <string name="enter_name">Enter Scouter Name</string>
    <string name="display_scouter_name">Scouter Name:  </string>
    <string name="display_team_number">Team Number:  </string>
    <string name="display_match_number">Match Number:  </string>
    <string name="continue_to_telyop">Continue to Telyop...</string>
    <string name="welcome_to_pit_scouting">Welcome to Pit Scouting</string>
    <string name="welcome_to_team_stats">Welcome to Team Stats</string>
    <string name="welcome_to_telyop">Welcome to Telyop</string>
    <string name="welcome_to_review_page">Welcome to review page</string>
    <string name="finish">Finish!</string>
    <string name="number_of_high_goals">Number of High Goals: </string>
    <string name="number_of_low_goals">Number of Low Goals: </string>
    <string name="submit">Submit</string>
    <string name="title_activity_bluetooth_paired_device_select">BluetoothPairedDeviceSelect</string>
    <string name="select_paired_device">Please select paired device from below</string>
    <string name="paired_devices">Paired devices: </string>
    <string name="refresh">Refresh</string>
    <string name="no_devices_paired">Hmmm... there dont seem to be devices paired...</string>
    <string name="radio_button_high">High Goal </string>
    <string name="radio_button_low">Low Goal</string>
    <string name="title_activity_upload_link">UploadLink</string>
    <string name="abort_connection">Abort Connection</string>
    <string name="picture_description">This is a picture</string>
    <string name="title_activity_text_sender">TextSender</string>
    <string name="generate_text_file">Generate text file</string>
    <string name="did_they_move_in_auto">Did they get moblity points? </string>
    <string name="yes_they_moved">Yes, they moved forward</string>
    <string name="no_they_didnt_move">No, they didn\'t move forward</string>
    <string name="scoring_ball1">Ball #1: </string>
    <string name="scoring_ball2">Ball #2: </string>
    <string name="scoring_ball3">Ball #3: </string>
    <string name="high_goal">High goal</string>
    <string name="hot_high_goal">Hot high goal</string>
    <string name="low_goal">Low goal</string>
    <string name="hot_low_goal">Hot low goal</string>
    <string name="no_shot">No shot taken</string>
    <string name="missed_goal">Missed</string>
    <string name="title_activity_server_settings">ServerSettings</string>
    <string name="title_activity_server_link">ServerLink</string>

</resources>
