<!-- Christ above, forgive me for this cluster fuck of code! -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MatchScoutingAuto" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="270dip"
        android:layout_height="270dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/picture_description"
        android:src="@drawable/polo_logo" />

    <TextView
        android:id="@+id/display_scouter_name:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/display_match_number:"
        android:layout_below="@+id/display_match_number:"
        android:textSize="20sp"
        android:text="@string/display_scouter_name" />

    <TextView
        android:id="@+id/display_team_number:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/display_scouter_name:"
        android:layout_below="@+id/display_scouter_name:"
        android:textSize="20sp"
        android:text="@string/display_team_number" />

    <TextView
        android:id="@+id/display_entered_match_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="6dip"
        android:layout_toRightOf="@+id/display_match_number:"
        android:textSize="20sp"
        tools:context=".MatchScoutingAuto" />

    <TextView
        android:id="@+id/display_entered_team_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_entered_scouter_name"
        android:layout_marginLeft="6dip"
        android:layout_toRightOf="@+id/display_team_number:"
        android:textSize="20sp"
        tools:context=".MatchScoutingAuto" />

    <TextView
        android:id="@+id/display_match_number:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="44dp"
        android:textSize="20sp"
        android:text="@string/display_match_number" />

    <TextView
        android:id="@+id/display_entered_scouter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_entered_match_number"
        android:layout_marginLeft="6dip"
        android:layout_toRightOf="@+id/display_scouter_name:"
        android:textSize="20sp"
        tools:context=".MatchScoutingAuto" />

    
    <!--
         <Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/display_team_number:"
	    android:layout_below="@+id/check_box_low"
	    android:layout_marginTop="229dp"
	    android:onClick="submitTeamData"
	    android:text="Submit data to table" />
    -->

    <TextView
        android:id="@+id/did_they_move_in_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="100dp"
        android:text="@string/did_they_move_in_auto"
        android:textStyle="bold"
        android:textSize="25sp" />
    
<RadioGroup
    android:id="@+id/radioGroup1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/did_they_move_in_auto"
    android:layout_below="@+id/did_they_move_in_auto"
    android:layout_marginTop="10dp"
    android:orientation="vertical" >

    <RadioButton
        android:id="@+id/yes_they_moved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes_they_moved" />

    <RadioButton
        android:id="@+id/no_they_didnt_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_they_didnt_move"
        android:checked="true" />
    
        
    </RadioGroup>

<RadioGroup
    android:id="@+id/radioGroup2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_below="@+id/scoring_ball1"
    android:layout_marginTop="10dp" >

	<RadioButton
    	android:id="@+id/radio_button_low1"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/low_goal" />

	<RadioButton
   		android:id="@+id/radio_button_high1"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/high_goal" />

	<RadioButton
    	android:id="@+id/radio_button_hot_high1"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/hot_high_goal" />

	<RadioButton
    	android:id="@+id/radio_button_hot_low1"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/hot_low_goal" />

	<RadioButton
    	android:id="@+id/radio_button_no_shot1"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/no_shot" 
    	android:checked="true" />
	
	<RadioButton
	    android:id="@+id/radio_button_missed1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/missed_goal" />
	
</RadioGroup>


<RadioGroup
    android:id="@+id/radioGroup3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="200dp"
    android:layout_alignTop="@+id/radioGroup2" >

    <RadioButton
        android:id="@+id/radio_button_low2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_goal" />

    <RadioButton
        android:id="@+id/radio_button_high2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_goal" />

    <RadioButton
        android:id="@+id/radio_button_hot_high2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_high_goal" />

    <RadioButton
        android:id="@+id/radio_button_hot_low2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_low_goal" />

    <RadioButton
        android:id="@+id/radio_button_no_shot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_shot" 
        android:checked="true" />

    <RadioButton
        android:id="@+id/radio_button_missed2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missed_goal" />
</RadioGroup>

<ImageView
    android:id="@+id/autoLogo"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_above="@+id/match_scouting_telyop_button"
    android:layout_alignParentRight="true"
    android:contentDescription="@string/picture_description"
    android:src="@drawable/autonomous" />

<Button
    android:id="@+id/match_scouting_telyop_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/imageView1"
    android:layout_alignParentRight="true"
    android:layout_marginBottom="30dp"
    android:onClick="startMatchScoutingMan"
    android:text="@string/continue_to_telyop"
    android:textSize="30sp" />


<TextView
    android:id="@+id/scoring_ball2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/scoring_ball1"
    android:layout_marginLeft="200dip"
    android:text="@string/scoring_ball2"
    android:textSize="25sp"
    android:textStyle="bold" />

<TextView
    android:id="@+id/scoring_ball1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/radioGroup1"
    android:layout_below="@+id/radioGroup1"
    android:text="@string/scoring_ball1"
    android:layout_marginTop="20dp"
    android:textSize="25sp"
    android:textStyle="bold" />

<RadioGroup
    android:id="@+id/radioGroup4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/radioGroup1"
    android:layout_alignTop="@+id/radioGroup3"
    android:layout_marginRight="28dp" >

    <RadioButton
        android:id="@+id/radio_button_low3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_goal" />

    <RadioButton
        android:id="@+id/radio_button_high3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_goal" />

    <RadioButton
        android:id="@+id/radio_button_hot_high3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_high_goal" />

    <RadioButton
        android:id="@+id/radio_button_hot_low3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_low_goal" />

    <RadioButton
        android:id="@+id/radio_button_no_shot3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_shot"
        android:checked="true" />

    <RadioButton
        android:id="@+id/radio_button_missed3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missed_goal" />
</RadioGroup>

<TextView
    android:id="@+id/scoring_ball3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/scoring_ball2"
    android:layout_marginLeft="400dp"
    android:text="@string/scoring_ball3"
    android:textSize="25sp"
    android:textStyle="bold" />

</RelativeLayout>

