<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MatchScoutingIntro" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="400dip"
        android:layout_height="400dip"
        android:layout_below="@+id/match_scouting_intro_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:contentDescription="@+string/logo"
        android:src="@drawable/polo_logo" />
    
    <EditText
        android:id="@+id/enter_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:paddingTop="80dip"
        android:hint="@string/enter_match"
        android:inputType="number" 
        android:textSize="30sp" >
       
    </EditText>

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enter_match"
        android:layout_below="@+id/enter_match"
        android:ems="10"
        android:paddingTop="40dip"
        android:hint="@string/enter_name"
        android:textSize="30sp" >

    </EditText>
    
    <EditText
        android:id="@+id/enter_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enter_name"
        android:layout_below="@+id/enter_name"
        android:ems="10"
        android:paddingTop="40dip"
        android:hint="@string/enter_team"
        android:inputType="number"
        android:textSize="30sp" >

    </EditText>

    <Button
        android:id="@+id/match_scouting_intro_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_team"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:onClick="startActivityMatchScoutingAuto"
        android:paddingTop="20dip"
        android:text="@string/button_send" 
        android:textSize="30sp"/>
    
</RelativeLayout>
